Fixed cropped view for big images in SpriteBox

--- a/client/style.less
+++ b/client/style.less
@@ -275,10 +275,9 @@ img {
 		
 		-webkit-justify-content: center;
 		justify-content: center;
+		
 		-webkit-align-items: center;
 		align-items: center;
-		-webkit-flex-direction: column;
-		flex-direction: column;
 	}
 }
 
